Fix exam view long filename overflow

--- a/ui/src/app/assets/styles/partial/_dashboard.scss
+++ b/ui/src/app/assets/styles/partial/_dashboard.scss
@@ -1998,7 +1998,6 @@
   }
 
   .attachment-name {
-    display: inline-block;
     font-family: $sitnet-family-helvetica;
     font-size: 12px;
     color: #555555;
